--- a/rooms/roomballot/templates/roomballot/rooms-list.html
+++ b/rooms/roomballot/templates/roomballot/rooms-list.html
@@ -54,7 +54,7 @@
                     <div class="col-lg-6"></div>
                     <div class="col-lg-6">
                         <div class="ui-widget mb-3" id="student-search-widget">
-                            <input id="room" style="width:100%;" placeholder="Search Rooms"><br>
+                            <input id="room" style="width:100%;" placeholder="Search All Rooms"><br>
                         </div>
                     </div>
                 </div>
