--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -238,7 +238,7 @@
                         Ballot</a><br>
                     {% if student.syndicate is None %}
                         <button class="btn btn-primary mb-3" id="add-to-syndicate">Add to Syndicate</button><br>
-                        <div class="ui-widget mb-2 alert alert-info mb-3" style="display: none"
+                        <div class="ui-widget mb-2 alert alert-light mb-3" style="display: none"
                              id="add-to-syndicate-widget">
                             <p>Start typing the syndicate ID below:</p>
                             <input id="syndicate" style="width: 100%;"><br>
@@ -257,7 +257,7 @@
                         Room</a><br>
                 {% else %}
                     <button class="btn btn-primary mb-3" id="allocate-room">Allocate Room</button><br>
-                    <div class="ui-widget mb-2 alert alert-info mb-3" style="display: none"
+                    <div class="ui-widget mb-2 alert alert-light mb-3" style="display: none"
                          id="allocate-room-widget">
                         <p>Start typing the room below:</p>
                         <input id="room" style="width: 100%;"><br>
