Methods to import last year's price

--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -99,6 +99,10 @@
                     <td>{{ room.band }}</td>
                 </tr>
                 <tr>
+                    <td><b>Weekly Price</b></td>
+                    <td>£{{ room.price }}</td>
+                </tr>
+                <tr>
                     <td><b>Contract Length</b></td>
                     <td>{{ room.staircase.contract_length }} weeks</td>
                 </tr>
