Added analytics page

--- a/rooms/roomballot/templates/roomballot/base-admin.html
+++ b/rooms/roomballot/templates/roomballot/base-admin.html
@@ -54,6 +54,7 @@
             <div class="list-group">
                 <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
                 <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
+                <a href="/roomballot/admin/analytics" class="list-group-item"><span>Analytics</span></a>
                 <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
                 <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
                 <a href="/roomballot/admin/students/ranking" class="list-group-item"><span>Ranking</span></a>
