--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -12,17 +12,12 @@
 
         <div class="col-md-3 col-sm-12 mb-4 d-md-block sidebar">
             <div class="list-group">
-                <a href="/roomballot/info" class="list-group-item active"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i>
-                    <span>Bursaries & Rent Reduction</span></a>
-                <a href="/roomballot/info/create-syndicate" class="list-group-item"><i
-                        class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
-                <a href="/roomballot/info/individual" class="list-group-item"><i
-                        class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
-                <a href="/roomballot/info/select-room" class="list-group-item"><i
-                        class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item"><i
-                        class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/info" class="list-group-item active"><span>Ballot Information</span></a>
+                <a href="#" class="list-group-item"><span>Bursaries & Rent Reduction</span></a>
+                <a href="/roomballot/info/create-syndicate" class="list-group-item"><span>Creating a Syndicate</span></a>
+                <a href="/roomballot/info/individual" class="list-group-item"><span>Ballot as an Individual</span></a>
+                <a href="/roomballot/info/select-room" class="list-group-item"><span>Selecting a Room</span></a>
+                <a href="/roomballot/about" class="list-group-item"><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
