--- a/rooms/roomballot/templates/roomballot/room-manage.html
+++ b/rooms/roomballot/templates/roomballot/room-manage.html
@@ -127,16 +127,16 @@
                     <td>{{ room.band }}</td>
                 </tr>
                 <tr>
-                    <td><b>Price</b></td>
-                    <td>£{{ weekly_price }} per week</td>
+                    <td><b>Old Price</b></td>
+                    <td>£{{ room.price }}</td>
+                </tr>
+                <tr>
+                    <td><b>New Price</b></td>
+                    <td>£{{ room.new_price|stringformat:'0.2f' }} per week</td>
                 </tr>
                 <tr>
                     <td><b>Contract Length</b></td>
                     <td>{{ room.staircase.contract_length }} weeks</td>
-                </tr>
-                <tr>
-                    <td><b>Total Price</b></td>
-                    <td>£{{ total_price }}</td>
                 </tr>
                 <tr>
                     <td><b>Occupied By</b></td>
