Added admin page to change weights

--- a/rooms/roomballot/templates/roomballot/base-admin.html
+++ b/rooms/roomballot/templates/roomballot/base-admin.html
@@ -59,6 +59,7 @@
                 <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
                 <a href="/roomballot/admin/students/ranking" class="list-group-item"><span>Ranking</span></a>
                 <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
+                <a href="/roomballot/admin/change-weights" class="list-group-item"><span>Pricing</span></a>
             </div>
             {% block export %}{% endblock %}
         </div>
