--- a/rooms/roomballot/templates/roomballot/base-student.html
+++ b/rooms/roomballot/templates/roomballot/base-student.html
@@ -79,6 +79,8 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/roomballot/dashboard">Dashboard</a>
                     <a class="dropdown-item" href="/roomballot/staircases">Browse Rooms</a>
+                    <a class="dropdown-item" href="/roomballot/ranking">Ballot Ranking</a>
+                    <a class="dropdown-item" href="/roomballot/info">Knowledge Base</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/accounts/logout">Logout</a>
                 </div>
@@ -87,6 +89,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/roomballot/ranking">Ballot Ranking</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/roomballot/info">Knowledge Base</a>
             </li>
             <div class="dropdown-divider-burgundy"></div>
             <li class="nav-item">
