Admin can create syndicate, logging

--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -67,7 +67,7 @@
                     {% for s in syndicates %}
                         {
                             value: "{{ s.syndicate_id }}",
-                            label: "{{ s.syndicate_id }}"
+                            label: "{{ s.syndicate_id }} (Owner {{ s.owner_id }})"
                         }
                         {% if not forloop.last %},{% endif %}
                     {% endfor %}
