--- a/rooms/roomballot/templates/roomballot/syndicate-list.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-list.html
@@ -16,6 +16,11 @@
 
         {% if syndicates %}
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="row mb-3">
+                    <div class="col-lg-12">
+                        <a class="btn btn-primary float-right" href="/roomballot/admin/create-syndicate">New Syndicate<i class="fas fa-plus ml-2"></i></a>
+                    </div>
+                </div>
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
                     <tr>
